--- a/Core.NHibernate.Tests/App.config
+++ b/Core.NHibernate.Tests/App.config
@@ -1,3 +1,11 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
+  
+    <configSections>
+    </configSections>
+    <connectionStrings>
+        <add name="DatabaseConnectionString"
+            connectionString="Data Source=SUVROC;Initial Catalog=Boilerplate;Integrated Security=True"
+            providerName="System.Data.SqlClient" />
+    </connectionStrings>
 </configuration>
