--- a/Core.NHibernate/Core.NHibernate.csproj
+++ b/Core.NHibernate/Core.NHibernate.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{320A5DEB-22A1-4AAB-99AF-8029B46D4628}</ProjectGuid>
+    <ProjectGuid>{D62D39E3-C924-4F39-A84B-F6C7B525A838}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Core.NHibernate.Tests</RootNamespace>
-    <AssemblyName>Core.NHibernate.Tests</AssemblyName>
+    <RootNamespace>Core.NHibernate</RootNamespace>
+    <AssemblyName>Core.NHibernate</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -30,6 +30,9 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="FluentMigrator">
+      <HintPath>..\packages\FluentMigrator.1.4.0.0\lib\40\FluentMigrator.dll</HintPath>
+    </Reference>
     <Reference Include="FluentNHibernate">
       <HintPath>..\packages\FluentNHibernate.2.0.1.0\lib\net40\FluentNHibernate.dll</HintPath>
     </Reference>
@@ -39,11 +42,11 @@
     <Reference Include="NHibernate">
       <HintPath>..\packages\NHibernate.4.0.2.4000\lib\net40\NHibernate.dll</HintPath>
     </Reference>
-    <Reference Include="nunit.framework">
-      <HintPath>..\packages\NUnit.2.6.4\lib\nunit.framework.dll</HintPath>
+    <Reference Include="Ninject">
+      <HintPath>..\packages\Ninject.3.2.2.0\lib\net45-full\Ninject.dll</HintPath>
     </Reference>
-    <Reference Include="Ploeh.AutoFixture">
-      <HintPath>..\packages\AutoFixture.3.22.0\lib\net40\Ploeh.AutoFixture.dll</HintPath>
+    <Reference Include="Ninject.Web.Common">
+      <HintPath>..\packages\Ninject.Web.Common.3.2.3.0\lib\net45-full\Ninject.Web.Common.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Configuration" />
@@ -55,28 +58,38 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="BaseNHibernateTest.cs" />
+    <Compile Include="Config\IDatabaseConfigurer.cs" />
+    <Compile Include="Config\INHibernateBuilder.cs" />
+    <Compile Include="Config\NHibernateBuilder.cs" />
+    <Compile Include="Config\PostgreDatabaseConfigurer.cs" />
+    <Compile Include="Config\SchemaTool.cs" />
+    <Compile Include="Config\SqlCompactConfigurer.cs" />
+    <Compile Include="Config\SQliteDatabaseConfigurer.cs" />
+    <Compile Include="Config\SQLServerDatabaseConfigurer.cs" />
+    <Compile Include="Config\UnitOfWork.cs" />
+    <Compile Include="DbMigrations\V20150101\_01_CreateTaskTable.cs" />
+    <Compile Include="DbMigrations\VersionTable.cs" />
+    <Compile Include="Config\NHibernateModule.cs" />
+    <Compile Include="Dependency\CoreModule.cs" />
+    <Compile Include="Mappings\CategoryMap.cs" />
+    <Compile Include="Mappings\TaskMap.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Repositories\RepositoryTest.cs" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="App.config" />
-    <None Include="packages.config" />
-    <None Include="README.md" />
+    <Compile Include="Repositories\NhRepository.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Core.Domain\Core.Domain.csproj">
       <Project>{1a52670a-b7e9-439e-ad94-0a6bad9c3e3b}</Project>
       <Name>Core.Domain</Name>
     </ProjectReference>
-    <ProjectReference Include="..\Core.NHibernate\Core.NHibernate.csproj">
-      <Project>{d62d39e3-c924-4f39-a84b-f6c7b525a838}</Project>
-      <Name>Core.NHibernate</Name>
-    </ProjectReference>
   </ItemGroup>
   <ItemGroup>
-    <Service Include="{82A7F48D-3B50-4B1E-B82E-3ADA8210C358}" />
+    <None Include="packages.config" />
+    <None Include="RunMigrations.bat" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="README.md" />
+  </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
