--- a/Core.NHibernate.Tests/packages.config
+++ b/Core.NHibernate.Tests/packages.config
@@ -1,6 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="AutoFixture" version="3.22.0" targetFramework="net45" />
+  <package id="AutoFixture.NUnit2" version="3.22.0" targetFramework="net45" />
   <package id="FluentNHibernate" version="2.0.1.0" targetFramework="net45" />
   <package id="Iesi.Collections" version="4.0.0.4000" targetFramework="net45" />
   <package id="NHibernate" version="4.0.2.4000" targetFramework="net45" />
