--- a/WebUI/WebUI.csproj
+++ b/WebUI/WebUI.csproj
@@ -185,6 +185,8 @@
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\ManageController.cs" />
     <Compile Include="Controllers\TaskController.cs" />
+    <Compile Include="Filters\UnitOfWorkAttribute.cs" />
+    <Compile Include="Filters\UnitOfWorkFilter.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
