--- a/Core.NHibernate.Tests/App.config
+++ b/Core.NHibernate.Tests/App.config
@@ -1,11 +1,17 @@
-﻿<?xml version="1.0" encoding="utf-8" ?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
   
     <configSections>
     </configSections>
     <connectionStrings>
-        <add name="DatabaseConnectionString"
-            connectionString="Data Source=SUVROC;Initial Catalog=Boilerplate;Integrated Security=True"
-            providerName="System.Data.SqlClient" />
+        <add name="DatabaseConnectionString" connectionString="Data Source=SUVROC;Initial Catalog=Boilerplate;Integrated Security=True" providerName="System.Data.SqlClient" />
     </connectionStrings>
+  <runtime>
+    <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
+      <dependentAssembly>
+        <assemblyIdentity name="Ploeh.AutoFixture" publicKeyToken="b24654c590009d4f" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-3.24.0.0" newVersion="3.24.0.0" />
+      </dependentAssembly>
+    </assemblyBinding>
+  </runtime>
 </configuration>
